--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ ul{
     position: fixed;
     width: 100%;
     z-index: 1;
+    opacity: .9;
 }
 .nav-container:hover{
     box-shadow: var(--bx-shdw);
