--- a/style.css
+++ b/style.css
@@ -118,8 +118,15 @@ button{
 @media only screen and (max-width: 800px){
     
 }/* TABLET NAVIGATION BAR END */ /* NAVIGATION BAR END*/
-
+.sale-container{
+    position: relative;
+    top: 3.6rem;
+    margin-bottom: 4rem;
+}
 /* PRODUCTS */
+#main-container{
+    margin-bottom: 4rem;
+}
 .products{
     display: flex;
     justify-content: center;
@@ -132,6 +139,19 @@ button{
     flex-grow: 1;
     margin: 1rem;
     margin-bottom: 6rem;
+}
+.add-to-cart{
+    visibility: hidden;
+    color: var(--clr-dblk);
+    background-color: var(--clr-wht);
+    position: relative;
+    top: 150px;
+    left: 10px;
+    width: 100px;
+    cursor: pointer;
+}
+.product:hover .add-to-cart{
+    visibility: visible;
 }
 .product-name,
 .product-brand,
@@ -151,14 +171,18 @@ span{
 }
 .product:hover{
     box-shadow: var(--bx-shdw);
-    height: 375px;
     background: var(--clr-blk);
 }
+
 .product-image{
     width: 300px;
     height: 300px;
     object-fit: cover;
 }
+.image-anchor{
+    pointer-events: none;  /* Remove image pointer event */
+}
+
 /* FOOTER */
 .footer{
     width: 100%;
