--- a/variable.css
+++ b/variable.css
@@ -5,7 +5,7 @@
     --clr-wht: HSL(210, 16%, 97%);
     --clr-ornge: HSL(12, 100%, 50%);
     --clr-dornge: hsl(12, 83%, 30%);
-  
+    --clr-gray: hsl(30, 1%, 52%);
     --fs-0-8: 0.9rem;
     --fs-1-2: 1.2rem;
     --fs-3: 3rem;
@@ -18,6 +18,7 @@
     --fw-600: 600;
   
     --bx-shdw: 1px 1px 20px 1px HSL(0, 0%, 0%);
+    --bx-shdwl: 0 5px 15px rgba(0, 0, 0, 0.2);
   }
   
   /* * RESET SETTING // https://piccalil.li/blog/a-modern-css-reset */
